--- a/package.json
+++ b/package.json
@@ -3,13 +3,21 @@
   "type": "module",
   "version": "0.0.1",
   "scripts": {
-    "dev": "astro dev",
-    "start": "astro dev",
+    "dev": "astro dev --host",
+    "start": "HOST=0.0.0.0 PORT=3000 node server.js",
     "build": "astro build",
     "preview": "astro preview",
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^2.1.7"
+    "@astrojs/node": "^5.1.0",
+    "@astrojs/react": "^2.1.0",
+    "@types/react": "^18.0.30",
+    "@types/react-dom": "^18.0.11",
+    "astro": "^2.1.8",
+    "express": "^4.18.2",
+    "openblocks-sdk": "^0.0.40",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
